# SystemTest

./: .gitignore
SystemTest/: CMakeLists.txt  Test.cpp  Test.hpp  TestConfig.cpp  TestConfig.hpp  TestSuite.cpp  TestSuite.hpp  main.cpp
tests/: Praktomat.list
tests/Praktomat/: Praktomat1.test  Praktomat2.test  Praktomat3.test  Praktomat4.test  Praktomat5.test  Praktomat6.test  Praktomat7.test  Praktomat8.test
